--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,6 +50,7 @@
     "react": "18.2.0",
     "react-day-picker": "8.9.1",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.0.0",
